# wgpu_wasm

./: Cargo.toml  LICENSE  README.md  index.html
pkg/: package.json  wgpu_wasm.d.ts  wgpu_wasm.js  wgpu_wasm_bg.wasm  wgpu_wasm_bg.wasm.d.ts
src/: lib.rs  main.rs
src/app/: app.rs  graphic.rs  mod.rs  state.rs
src/draw/: brush.rs  color.rs  document.rs  geometry.rs  mesh.rs  mod.rs  painter.rs  point.rs  rect.rs  shader.wgsl
src/painter/: geometry.rs  mod.rs  painter.rs
