[package]
name = "wgpu_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "^0.30"
wgpu = "0.20.1"

log = "0.4.21"
console_error_panic_hook = "^0"
console_log = "^1.0.0"

pollster = "0.3.0"
tracing = "0.1.40"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "HtmlElement", "HtmlInputElement", "Event", "EventTarget", "InputEvent", "KeyboardEvent", "Window", "HtmlCanvasElement"]
